--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img class="footer-logo" src="logo.svg" alt="Spacey" />
             is in private alpha. Get in touch at
             <a href="mailto:hello@spacey.ai">hello@spacey.ai</a>
-            to learn about our AI architecture plaform.
+            to learn about our AI platform for creating custom architectural spaces.
         </p>
     </footer>
 </body>
