--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
+<html lang="en" dir="ltr">
 <head>
+    <title>Spacey. AI platform for custom architecture</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,900" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -64,6 +66,14 @@
             opacity: 0.4;
         }
     </style>
+    <meta charset="utf-8">
+    <meta property="og:title" content="simplify.">
+    <meta property="og:description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
+    <meta property="og:image" content="https://spacey.ai/hero.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@spaceyAI">
+    <meta name="twitter:creator" content="@architectcodes">
+    <meta name="description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
 </head>
 <body>
     <h1>simplify.</h1>
@@ -76,3 +86,4 @@
         </p>
     </footer>
 </body>
+</html>
