--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <head>
     <title>Spacey. AI platform for custom architecture</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,900" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132681474-1"></script>
+    <script>
+        if (window.location.hostname !== 'localhost') {
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', 'UA-132681474-1');
+        }
+    </script>
+    <meta charset="utf-8">
+    <meta property="og:title" content="simplify.">
+    <meta property="og:description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
+    <meta property="og:image" content="https://spacey.ai/hero.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@spaceyAI">
+    <meta name="twitter:creator" content="@architectcodes">
+    <meta name="description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         *, *::after, *::before {
@@ -66,14 +84,6 @@
             opacity: 0.4;
         }
     </style>
-    <meta charset="utf-8">
-    <meta property="og:title" content="simplify.">
-    <meta property="og:description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
-    <meta property="og:image" content="https://spacey.ai/hero.png" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@spaceyAI">
-    <meta name="twitter:creator" content="@architectcodes">
-    <meta name="description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
 </head>
 <body>
     <h1>simplify.</h1>
