Add image dimensions

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h1>simplify.</h1>
     <footer>
         <p>
-            <img class="footer-logo" src="logo.svg" alt="Spacey" />
+            <img class="footer-logo" src="logo.svg" alt="Spacey" width="113" height="42" />
             is in private alpha. Get in touch at
             <a href="mailto:hello@spacey.ai">hello@spacey.ai</a>
             to learn about our AI platform for creating custom architectural spaces.
