--- a/team/tomek/index.html
+++ b/team/tomek/index.html
@@ -1,4 +1,16 @@
 <!doctype html>
-<body style="display: flex; align-items: center; justify-content: center; height: 100%;">
-  <p style="font-size: calc(12px + 10vw)">👋</p>
-</body>
+<style>
+  html, body {
+    
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  p {
+    font-size: calc(12px + 10vw);
+  }
+</style>
+<p>👋</p>
