--- a/tomek/index.html
+++ b/tomek/index.html
@@ -1,22 +1,2 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width">
-<style>
-  html, body {
-    height: 100%;
-  }
-  
-  * {
-    margin: 0;
-  }
-    
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  p {
-    font-size: calc(12px + 10vw);
-  }
-</style>
-<p>👋</p>
+<meta http-equiv="refresh" content="0;url=./tomek.vcf" />
