--- a/tomek/index.html
+++ b/tomek/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <meta http-equiv="refresh" content="0;url=./tomek.vcf" />
-<a href="./tomek.vcf">add to contacts</a>
+<a href="./tomek.vcf" target="_blank">add to contacts</a>
