--- a/tomek/index.html
+++ b/tomek/index.html
@@ -1,3 +1,10 @@
 <!doctype html>
 <meta http-equiv="refresh" content="0;url=./tomek.vcf" />
+<meta name="viewport" content="width=device-width" />
 <a href="./tomek.vcf" target="_blank">add to contacts</a>
+<script>
+  document.querySelector('a').addEventListener('click', (event) => {
+    event.preventDefault();
+    document.location.href = event.target.href;
+  });
+</script>
