--- a/tomek/index.html
+++ b/tomek/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta http-equiv="refresh" content="0;url=./tomek.vcf" />
 <meta name="viewport" content="width=device-width" />
-<a href="./tomek.vcf" target="_blank">add to contacts</a>
+<a href="https://spacey.ai/tomek/tomek.vcf" target="_blank">add to contacts 2</a>
 <script>
   document.querySelector('a').addEventListener('click', (event) => {
     event.preventDefault();
