--- a/tomek/index.html
+++ b/tomek/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <meta http-equiv="refresh" content="0;url=./tomek.vcf" />
 <meta name="viewport" content="width=device-width" />
-<a href="https://spacey.ai/tomek/tomek.vcf" target="_blank">add to contacts 2</a>
-<script>
-  document.querySelector('a').addEventListener('click', (event) => {
-    event.preventDefault();
-    document.location.href = event.target.href;
-  });
-</script>
+<body style="font-family: sans-serif">
+  <script>
+    if (navigator.standalone) {
+      document.body.appendChild(
+        Object.assign(document.createElement('p'), {
+          textContent: 'Open this page in your mobile browser to add me to your contacts.'
+        })
+      );
+    }
+  </script>
+</body>
