--- a/tomek/index.html
+++ b/tomek/index.html
@@ -2,13 +2,5 @@
 <meta http-equiv="refresh" content="0;url=./tomek.vcf" />
 <meta name="viewport" content="width=device-width" />
 <body style="font-family: sans-serif">
-  <script>
-    if (navigator.standalone) {
-      document.body.appendChild(
-        Object.assign(document.createElement('p'), {
-          textContent: 'Open this page in your mobile browser to add me to your contacts.'
-        })
-      );
-    }
-  </script>
+  <p>Open this page in your mobile browser to add me to your contacts.</p>
 </body>
