--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <div class="header__backgroundPreview"></div>
         <div class="header__background"></div>
 
@@ -51,6 +51,23 @@
                 }
             })();
         </script>
+    </header>
+
+    <div class="features">
+        <div class="features__feature">
+            <h3>jak działa Spacey?</h3>
+            <p>Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza 🎨</p>
+        </div>
+
+        <div class="features__feature">
+            <h3>jak długo powstaje projekt?</h3>
+            <p>Spacey jest zasilana za pomocą sztucznej inteligencji. Dlatego nie musisz umawiać się na spotkanie ani czekać na swój projekt wielu dni. Zobaczysz go błyskawicznie, o każdej porze dnia i nocy 🕗</p>
+        </div>
+
+        <div class="features__feature">
+            <h3>ile to kosztuje?</h3>
+            <p>Jeśli zakwalifikujesz się do naszego programu pilotażowego, projekt wnętrza możesz dostać od nas za darmo. Projekt stworzony przez Spacey zawsze będzie kosztował znacznie mniej niż u tradycyjnego projektanta 🚀</p>
+        </div>
     </div>
 </body>
 </html>
