--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-    <title>Spacey. AI platform for custom architecture</title>
+    <title>Spacey. Wirtualny projektant wnętrz</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,900" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132681474-1"></script>
@@ -15,12 +15,12 @@
     </script>
     <meta charset="utf-8">
     <meta property="og:title" content="simplify.">
-    <meta property="og:description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
+    <meta property="og:description" content="Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.">
     <meta property="og:image" content="https://spacey.ai/hero.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@spaceyAI">
     <meta name="twitter:creator" content="@architectcodes">
-    <meta name="description" content="Spacey is in private alpha. Get in touch at hello@spacey.ai to learn about our AI platform for creating custom architectural spaces.">
+    <meta name="description" content="Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css">
 </head>
