--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="description" content="Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
 </head>
 <body>
     <header class="header">
@@ -35,15 +36,19 @@
         </div>
 
         <script>
-            (() => {
+            (function() {
                 const background = document.querySelector('.header__background');
-                const finish = () => {
+                const finish = function() {
                     background.classList.remove('header__background--hidden');
                 };
                 const loader = new Image();
                 Promise.all([
-                    new Promise(resolve => loader.addEventListener('load', resolve)),
-                    new Promise(resolve => setTimeout(resolve, 500)),
+                    new Promise(function(resolve) {
+                        loader.addEventListener('load', resolve)
+                    }),
+                    new Promise(function(resolve) {
+                        setTimeout(resolve, 500)
+                    }),
                 ]).then(finish);
                 loader.src = '/images/header-background.jpg';
                 if (!loader.complete) {
