Initial callout sketch

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
         </script>
     </div>
 
+    <div class="callout">
+        <h1>👋 Hej!</h1>
+        <p>Mamy jeszcze kilka miejsc na bezpłatny pilotaż Spacey. Przetestuj aplikację, a dostaniesz od nas projekt Twojego wnętrza. Jedyna szansa! 😇</p>
+        <p><input><button>Testuj z moim wnętrzem</button></p>
+    </div>
+
     <div class="features">
         <div class="features__feature">
             <img src="/images/icons8-paint_palette.svg" alt="">
