--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="features__feature">
             <img src="/images/icons8-check_all.svg" alt="">
             <h3>ile to kosztuje?</h3>
-            <p>Jeśli zakwalifikujesz się do&nbsp;naszego programu pilotażowego, projekt wnętrza możesz dostać od&nbsp;nas za&nbsp;darmo. Projekt stworzony przez&nbsp;Spacey zawsze będzie kosztował znacznie mniej niż u&nbsp;tradycyjnego projektanta.</p>
+            <p>Jeśli zakwalifikujesz się do&nbsp;naszego programu pilotażowego, projekt wnętrza możesz dostać od&nbsp;nas bezpłatnie. Projekt stworzony przez&nbsp;Spacey zawsze będzie kosztował znacznie mniej niż u&nbsp;tradycyjnego projektanta.</p>
         </div>
     </div>
 </body>
