--- a/index.html
+++ b/index.html
@@ -164,5 +164,41 @@
             <p>Jeśli zakwalifikujesz się do&nbsp;naszego programu pilotażowego, projekt wnętrza możesz dostać od&nbsp;nas bezpłatnie. Projekt stworzony przez&nbsp;Spacey zawsze będzie kosztował znacznie mniej niż u&nbsp;tradycyjnego projektanta.</p>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="logo">
+            <img src="/images/logo.svg" alt="">
+            Spacey
+        </div>
+        <section class="footer__section">
+            <h3>Dowiedz się więcej</h3>
+            <ul class="footer__menu">
+                <li>
+                    <a href="https://instagram.com/spacey.ai">
+                        Aktualności
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/spacey.ai/">
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="/kontakt">
+                        Kontakt
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="footer__section">
+            <h3>Skontaktuj się z nami</h3>
+            <p>
+                Spacey sp. z o. o.<br>
+                ul. Poznańska 2c<br>
+                34-084 Rzeszów<br>
+                NIP: 813-380-92-65
+            </p>
+        </section>
+    </footer>
 </body>
 </html>
