Finish callout mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" dir="ltr">
+
 <head>
     <title>Spacey. Wirtualny projektant wnętrz</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,900,600" rel="stylesheet">
@@ -30,7 +31,17 @@
         <div class="header__backgroundPreview"></div>
         <div class="header__background"></div>
 
-        <h1 class="header__tagline content">Wirtualny<br/>projektant<br/>wnętrz.</h1>
+        <h1 class="header__tagline content">Wirtualny<br />projektant<br />wnętrz.</h1>
+
+        <div class="header__callout callout">
+            <h1>👋 Hej!</h1>
+            <p>Mamy jeszcze kilka miejsc na&nbsp;nasz bezpłatny pilotaż. Przetestuj Spacey, a&nbsp;dostaniesz od&nbsp;nas bezpłatnie projekt Twojego wnętrza. To jedyna szansa! 😇</p>
+            <form class="cta__form">
+                <input class="cta__emailInput" placeholder="mój adres email">
+                <input type="submit" class="cta" value="Testuj z moim wnętrzem">
+            </form>
+        </div>
+
 
         <script>
             (function() {
@@ -137,12 +148,6 @@
                 topMenu.classList.add('topMenu--withJs');
             })()
         </script>
-    </div>
-
-    <div class="callout">
-        <h1>👋 Hej!</h1>
-        <p>Mamy jeszcze kilka miejsc na bezpłatny pilotaż Spacey. Przetestuj aplikację, a dostaniesz od nas projekt Twojego wnętrza. Jedyna szansa! 😇</p>
-        <p><input><button>Testuj z moim wnętrzem</button></p>
     </div>
 
     <div class="features">
