--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="features__feature">
             <img src="/images/icons8-design.svg" alt="">
             <h3>jak długo powstaje projekt?</h3>
-            <p>Spacey jest zasilana za&nbsp;pomocą sztucznej inteligencji. Dlatego nie&nbsp;musisz umawiać się na&nbsp;spotkanie ani&nbsp;czekać na&nbsp;swój projekt wielu dni. Zobaczysz go błyskawicznie, o&nbsp;każdej porze dnia i&nbsp;nocy.</p>
+            <p>Spacey to&nbsp;aplikacja oparta na&nbsp;wiedzy i&nbsp;doświadczeniu projektantów. Nie&nbsp;musisz umawiać się na&nbsp;spotkanie ani&nbsp;czekać na&nbsp;swój projekt wielu dni. Zobaczysz go błyskawicznie, o&nbsp;każdej porze dnia i&nbsp;nocy.</p>
         </div>
 
         <div class="features__feature">
