--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="header__callout callout parallax">
             <h1>👋 Hej!</h1>
-            <p>Mamy jeszcze kilka miejsc na&nbsp;nasz bezpłatny pilotaż. Przetestuj Spacey, a&nbsp;dostaniesz od&nbsp;nas bezpłatnie projekt Twojego wnętrza. To jedyna szansa! 😇</p>
+            <p>Mamy jeszcze kilka miejsc w&nbsp;naszym bezpłatnym pilotażu. Przetestuj Spacey, a&nbsp;dostaniesz od&nbsp;nas bezpłatnie projekt Twojego wnętrza. To jedyna szansa! 😇</p>
             <form class="cta__form">
                 <input class="cta__emailInput" placeholder="mój adres email">
                 <input type="submit" class="cta" value="Testuj z moim wnętrzem">
