Wire up the form

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="header__callout callout parallax">
             <h1>👋 Hej!</h1>
             <p>Mamy jeszcze kilka miejsc w&nbsp;naszym bezpłatnym pilotażu. Przetestuj Spacey, a&nbsp;dostaniesz od&nbsp;nas bezpłatnie projekt Twojego wnętrza. To jedyna szansa! 😇</p>
-            <form class="cta__form">
-                <input class="cta__emailInput" placeholder="mój adres email">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSdycgx0QwDq-HJFxlUzK7ojCS6kKdoX-I9t9FWDu-A48WLaIg/viewform?usp=pp_url" target="_blank" class="cta__form">
+                <input class="cta__emailInput" name="entry.1467209122" placeholder="mój adres email">
                 <input type="submit" class="cta" value="Testuj z moim wnętrzem">
             </form>
         </div>
