Pilot program footer on mobile

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         </script>
     </header>
 
-    <div class="topMenu header__horizontalPaddingMirror" id="topMenu">
+    <div class="topMenu content__paddingMirror" id="topMenu">
         <div class="content topMenu__content">
             <div class="logo topMenu__logo">
                 <svg width="30" height="55" viewBox="0 0 30 55"><path d="M17.347 22.2712H29.0059L11.6588 54.764V32.4924H0L17.347 0V22.2712Z" fill="currentColor"/></svg>
-                <span>Spacey</span>
+                <span class="logo__wordmark">Spacey</span>
             </div>
 
             <input type="checkbox" class="topMenu__toggleCheckbox" id="topMenuToggle">
@@ -150,7 +150,7 @@
         </script>
     </div>
 
-    <div class="features">
+    <div class="features content">
         <div class="features__feature">
             <img src="/images/icons8-paint_palette.svg" alt="">
             <h3>jak działa Spacey?</h3>
@@ -171,29 +171,17 @@
     </div>
 
     <footer class="footer">
-        <div class="logo">
-            <img src="/images/logo.svg" alt="">
-            Spacey
-        </div>
-        <section class="footer__section">
-            <h3>Dowiedz się więcej</h3>
-            <ul class="footer__menu">
-                <li>
-                    <a href="https://instagram.com/spacey.ai">
-                        Aktualności
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/spacey.ai/">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="/kontakt">
-                        Kontakt
-                    </a>
-                </li>
-            </ul>
+        <section class="footer__section footer__section--light">
+            <img src="/images/footer-background.jpg" width="1300" height="531">
+            <div class="footer__sectionContent content">
+                <h3>Pilotaż trwa!</h3>
+                <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza w&nbsp;zamian za&nbsp;przetestowanie aplikacji internetowej Spacey.</p>
+                <p>Aby wziąć udział w&nbsp;kwalifikacjach, wypełnij formularz poniżej.</p>
+                <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdycgx0QwDq-HJFxlUzK7ojCS6kKdoX-I9t9FWDu-A48WLaIg/viewform?usp=pp_url" target="_blank">
+                    <input type="email" name="entry.1467209122" placeholder="adres email">
+                    <input type="submit" value="Kontynuuj">
+                </form>
+            </div>
         </section>
         <section class="footer__section">
             <h3>Skontaktuj się z nami</h3>
