--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <img src="/images/footer-background.jpg" width="1300" height="531">
             <div class="footer__sectionContent content">
                 <h3>Pilotaż trwa!</h3>
-                <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza w&nbsp;zamian za&nbsp;przetestowanie aplikacji internetowej Spacey.</p>
+                <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza. Udział w&nbsp;pilotażu polega na&nbsp;przetestowaniu aplikacji internetowej Spacey.</p>
                 <p>Aby wziąć udział w&nbsp;kwalifikacjach, wypełnij formularz poniżej.</p>
                 <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdycgx0QwDq-HJFxlUzK7ojCS6kKdoX-I9t9FWDu-A48WLaIg/viewform?usp=pp_url" target="_blank">
                     <input type="email" name="entry.1467209122" placeholder="adres email">
@@ -183,14 +183,55 @@
                 </form>
             </div>
         </section>
-        <section class="footer__section">
-            <h3>Skontaktuj się z nami</h3>
-            <p>
-                Spacey sp. z o. o.<br>
-                ul. Poznańska 2c<br>
-                34-084 Rzeszów<br>
-                NIP: 813-380-92-65
-            </p>
+        <section class="footer__section footer__section--dark">
+            <div class="footer__sectionContent content">
+                <div class="contactDetails">
+                    <div class="logo contactDetails__logo">
+                        <svg width="30" height="55" viewBox="0 0 30 55">
+                            <path d="M17.347 22.2712H29.0059L11.6588 54.764V32.4924H0L17.347 0V22.2712Z" fill="currentColor" /></svg>
+                        <span class="logo__wordmark logo__wordmark--heavy">Spacey</span>
+                        <span class="logo__suffix">sp. z o. o.</span>
+                    </div>
+                    <dl class="contactDetails__details">
+                        <a href="mailto:info@spacey.ai">
+                            <dt>
+                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Adres email</title><path d="M20,4H4C2.895,4,2,4.895,2,6v12c0,1.105,0.895,2,2,2h16c1.105,0,2-0.895,2-2V6C22,4.895,21.105,4,20,4z M20,8l-8,5L4,8V6 l8,5l8-5V8z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl>info@spacey.ai</dl>
+                        </a>
+                        <div>
+                            <dt>
+                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Siedziba</title><path d="M12,2C8.134,2,5,5.134,5,9c0,5,7,13,7,13s7-8,7-13C19,5.134,15.866,2,12,2z M12,11.5c-1.381,0-2.5-1.119-2.5-2.5 c0-1.381,1.119-2.5,2.5-2.5s2.5,1.119,2.5,2.5C14.5,10.381,13.381,11.5,12,11.5z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl><span class="nowrap">ul. Poznańska 2c,</span> <span class="nowrap">34-084 Rzeszów</span></dl>
+                        </div>
+                        <div>
+                            <dt>
+                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Dane KRS</title><path d="M12,1L3,5c0,0,0,4,0,6c0,7.83,6.439,11.486,9,12c2.561-0.514,9-4.17,9-12c0-2,0-6,0-6L12,1z M11,16.414l-4.185-4.185 l1.414-1.414L11,13.586l5.792-5.792l1.414,1.414L11,16.414z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl>NIP 813-380-92-65</dl>
+                        </div>
+                        <a href="https://www.instagram.com/spacey.ai/" title="Obserwuj nas na Instagramie" target="_blank">
+                            <dt>
+                                <svg width="24" height-"24" viewBox="0 0 24 24"><title>Instagram</title><path d="M 8 3 C 5.239 3 3 5.239 3 8 L 3 16 C 3 18.761 5.239 21 8 21 L 16 21 C 18.761 21 21 18.761 21 16 L 21 8 C 21 5.239 18.761 3 16 3 L 8 3 z M 18 5 C 18.552 5 19 5.448 19 6 C 19 6.552 18.552 7 18 7 C 17.448 7 17 6.552 17 6 C 17 5.448 17.448 5 18 5 z M 12 7 C 14.761 7 17 9.239 17 12 C 17 14.761 14.761 17 12 17 C 9.239 17 7 14.761 7 12 C 7 9.239 9.239 7 12 7 z M 12 9 A 3 3 0 0 0 9 12 A 3 3 0 0 0 12 15 A 3 3 0 0 0 15 12 A 3 3 0 0 0 12 9 z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl>@spacey.ai</dl>
+                        </a>
+                        <a href="Artykuły/" title="Polub nas na Facebooku" target="_blank">
+                            <dt>
+                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Facebook</title><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h7.621v-6.961h-2.343v-2.725h2.343V9.309 c0-2.324,1.421-3.591,3.495-3.591c0.699-0.002,1.397,0.034,2.092,0.105v2.43h-1.428c-1.13,0-1.35,0.534-1.35,1.322v1.735h2.7 l-0.351,2.725h-2.365V21H19c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl>/&thinsp;spaceyAI</dl>
+                        </a>
+                        <a href="https://www.linkedin.com/company/spacey-ai/" title="Obserwuj nas na LinkedIn" target="_blank">
+                            <dt>
+                                <svg width="24" height="24" viewBox="0 0 24 24"><title>LinkedIn</title><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h14c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z M9,17H6.477v-7H9 V17z M7.694,8.717c-0.771,0-1.286-0.514-1.286-1.2s0.514-1.2,1.371-1.2c0.771,0,1.286,0.514,1.286,1.2S8.551,8.717,7.694,8.717z M18,17h-2.442v-3.826c0-1.058-0.651-1.302-0.895-1.302s-1.058,0.163-1.058,1.302c0,0.163,0,3.826,0,3.826h-2.523v-7h2.523v0.977 C13.93,10.407,14.581,10,15.802,10C17.023,10,18,10.977,18,13.174V17z" fill="currentColor" /></svg>
+                            </dt>
+                            <dl>@spacey-ai</dl>
+                        </a>
+                    </dl>
+                </div>
+            </div>
         </section>
     </footer>
 
