Footer on desktop

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
     </div>
 
     <footer class="footer">
-        <section class="footer__section footer__section--light">
+        <section class="footer__section footer__section--light footer__section--pilotProgram">
             <img src="/images/footer-background.jpg" width="1300" height="531">
-            <div class="footer__sectionContent content">
+            <div class="footer__sectionContent content content--noMaxWidth">
                 <h3>Pilotaż trwa!</h3>
                 <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza. Udział w&nbsp;pilotażu polega na&nbsp;przetestowaniu aplikacji internetowej Spacey.</p>
                 <p>Aby wziąć udział w&nbsp;kwalifikacjach, wypełnij formularz poniżej.</p>
@@ -183,8 +183,9 @@
                 </form>
             </div>
         </section>
+        <div class="footer__filler"></div>
         <section class="footer__section footer__section--dark">
-            <div class="footer__sectionContent content">
+            <div class="footer__sectionContent content content--noMaxWidth">
                 <div class="contactDetails">
                     <div class="logo contactDetails__logo">
                         <svg width="30" height="55" viewBox="0 0 30 55">
@@ -209,7 +210,7 @@
                             <dt>
                                 <svg width="24" height="24" viewBox="0 0 24 24"><title>Dane KRS</title><path d="M12,1L3,5c0,0,0,4,0,6c0,7.83,6.439,11.486,9,12c2.561-0.514,9-4.17,9-12c0-2,0-6,0-6L12,1z M11,16.414l-4.185-4.185 l1.414-1.414L11,13.586l5.792-5.792l1.414,1.414L11,16.414z" fill="currentColor" /></svg>
                             </dt>
-                            <dl>NIP 813-380-92-65</dl>
+                            <dl class="nowrap">NIP 813-380-92-65</dl>
                         </div>
                         <a href="https://www.instagram.com/spacey.ai/" title="Obserwuj nas na Instagramie" target="_blank">
                             <dt>
