Improve desktop layout

--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
     </div>
 
     <footer class="footer">
+        <div class="footer__filler footer__filler--image1"></div>
         <section class="footer__section footer__section--light footer__section--pilotProgram">
-            <img src="/images/footer-background.jpg" width="1300" height="531">
+            <img src="/images/footer-filler-image-1.jpg" width="1300" height="531">
             <div class="footer__sectionContent content content--noMaxWidth">
                 <h3>Pilotaż trwa!</h3>
                 <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza. Udział w&nbsp;pilotażu polega na&nbsp;przetestowaniu aplikacji internetowej Spacey.</p>
@@ -183,7 +184,7 @@
                 </form>
             </div>
         </section>
-        <div class="footer__filler"></div>
+        <div class="footer__filler footer__filler--image2"></div>
         <section class="footer__section footer__section--dark">
             <div class="footer__sectionContent content content--noMaxWidth">
                 <div class="contactDetails">
